--- a/app/views/plantings/show.html.slim
+++ b/app/views/plantings/show.html.slim
@@ -59,6 +59,11 @@ div class="container-fluid"
       strong Stakes Removed
     div class="col-xs-8 col-md-4" 
       = @planting.stakes_removed
+  div class="row edit-row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Initial Checks Received
+    div class="col-xs-8 col-md-4" 
+      = @planting.initial_checks_received
   br
   /! Start maintenance records section
   hr class="section-separator"
