--- a/app/views/shared/_page_header.html.slim
+++ b/app/views/shared/_page_header.html.slim
@@ -27,6 +27,8 @@ nav class="navbar navbar-default"
           ul class="dropdown-menu"
             li
               = link_to "Plantings Report", reports_plantings_path
+            li
+              = link_to "Adoption Requests Report", reports_adoption_requests_path
         li
           = link_to(logout_path) do 
             span class="glyphicon glyphicon-log-out logout-icon" aria-hidden="true"
