--- a/app/views/reports/adoption_requests_results.html.slim
+++ b/app/views/reports/adoption_requests_results.html.slim
@@ -11,7 +11,7 @@ div class="container-fluid"
       = link_to reports_adoption_requests_results_path( format: :csv, params: request.query_parameters ) do
           button class="btn btn-default" Export to CSV  
       | &nbsp;
-      = link_to "#", :id => "map-results-action", :target => "_blank" do
+      = link_to "#", :id => "adoption-request-results-map-action", :target => "_blank" do
           button class="btn btn-default" Map Results
   div class="row"
     div class="col-xs-12"
@@ -30,7 +30,7 @@ div class="container-fluid"
           tbody
             - @results.each do |adoption_request|
               tr
-                input type="hidden" name="map-coordinates" value="#{ adoption_request.id  }|#{ adoption_request.latitude }|#{ adoption_request.longitude }|#{ adoption_request.house_number } #{ adoption_request.street_name }"
+                input type="hidden" name="map-coordinates" value="#{ adoption_request.id  }|#{ adoption_request.latitude }|#{ adoption_request.longitude }|#{ adoption_request.house_number } #{ adoption_request.street_name }|#{ adoption_request.received_on }"
                 td = adoption_request.id
                 td = adoption_request.received_on
                 td = adoption_request.zone
