--- a/app/views/reports/adoption_requests.html.slim
+++ b/app/views/reports/adoption_requests.html.slim
@@ -15,6 +15,7 @@ div class="container-fluid"
         = f.text_field :street_name
         = f.text_field :zip_code
         = f.select :completed, options_for_select( [ [ "Both", "ignore" ], [ "Yes", "yes" ], [ "No", "no" ] ], "no" )
+        = f.select :include_nil_received_on, options_for_select( [ [ "Yes", "yes" ], [ "No", "no" ] ], "yes" ), label: "Include entries with no received on date (legacy)"
         div class="form-group"
           div class="col-md-4"
           div class="col-md-8"
