--- a/app/views/plantings/_form.html.slim
+++ b/app/views/plantings/_form.html.slim
@@ -7,7 +7,7 @@ div class="row"
           ul
             - @planting.errors.full_messages.each do |message|
               li = message
-      = f.collection_select :adoption_request_id, AdoptionRequest.all, :id, :text_for_html_select_option, prompt: true
+      = f.collection_select :adoption_request_id, AdoptionRequest.all.order( :house_number, :street_name ), :id, :text_for_html_select_option, prompt: true
       = f.date_field :planted_on
       = f.text_field :event
       = f.collection_select :tree_id, Tree.all.order( "common_name" ), :id, :text_for_html_select_option, prompt: true
