--- a/app/views/plantings/index.html.slim
+++ b/app/views/plantings/index.html.slim
@@ -1,6 +1,6 @@
 div class="container-fluid"
   div class="row"
-    div class="col-xs-8 col-md-9" 
+    div class="col-xs-8 col-md-9"
       h2 class="header-inline"
         | Plantings
       medium
@@ -14,7 +14,7 @@ div class="container-fluid"
         | &nbsp;)
     div class="col-xs-12 text-right"
       = link_to plantings_path( format: :csv ) do
-        button class="btn btn-default" Export to CSV  
+        button class="btn btn-default" Export to CSV
   div class="row"
     div class="col-xs-12"
       div class="table-responsive"
@@ -36,7 +36,7 @@ div class="container-fluid"
             - @plantings.each do |planting|
               tr
                 td = planting.planted_on
-                td = planting.parent_adoption_request.zone
+                td = planting.parent_adoption_request.zone.name unless planting.parent_adoption_request.zone.nil?
                 td = planting.parent_adoption_request.house_number
                 td = planting.parent_adoption_request.street_name
                 td = planting.placement
