--- a/app/views/plantings/show.html.slim
+++ b/app/views/plantings/show.html.slim
@@ -1,17 +1,17 @@
 div class="container-fluid"
   div class="row"
-    div class="col-xs-8 col-md-10" 
-      h2 class="header-inline" 
+    div class="col-xs-8 col-md-10"
+      h2 class="header-inline"
         | Planting Details
       = render partial: 'shared/back_to_listing'
   hr class="section-separator"
   div class="row"
-    div class="col-xs-8 col-md-9" 
+    div class="col-xs-8 col-md-9"
       h4 class="header-inline" Planting
     div class="col-xs-4 col-md-3"
       div class="text-right"
         medium
-          | ( 
+          | (
           = link_to "Edit", edit_planting_path(@planting)
           | &nbsp;|&nbsp;
           = link_to 'Delete', @planting, data: {:confirm => 'Are you sure?'}, :method => :delete
@@ -20,55 +20,55 @@ div class="container-fluid"
           |  )
   hr class="section-separator"
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Planted On
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.planted_on
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Event
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.event
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Zone
-    div class="col-xs-8 col-md-4" 
-      = @planting.parent_adoption_request.zone
+    div class="col-xs-8 col-md-4"
+      = @planting.parent_adoption_request.zone.name unless @planting.parent_adoption_request.zone.nil?
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Address
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.parent_adoption_request.full_address
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Placement
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.placement
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Plant Space Width
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.plant_space_width
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Tree
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.tree_species.common_name unless @planting.tree_species.common_name.nil?
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Stakes Removed
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.stakes_removed
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Initial Checks Received
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @planting.initial_checks_received
   br
   /! Start maintenance records section
   hr class="section-separator"
   div class="row"
-    div class="col-xs-8 col-md-9" 
+    div class="col-xs-8 col-md-9"
       h4 class="header-inline" Maintenance Records
       medium
         | (&nbsp;
@@ -110,7 +110,7 @@ div class="container-fluid"
   /! Start notes section
   hr class="section-separator"
   div class="row"
-    div class="col-xs-8 col-md-9" 
+    div class="col-xs-8 col-md-9"
       h4 class="header-inline" Notes
       medium
         | (&nbsp;
