--- a/app/views/reports/adoption_requests.html.slim
+++ b/app/views/reports/adoption_requests.html.slim
@@ -9,7 +9,7 @@ div class="container-fluid"
       = bootstrap_form_tag url: 'adoption_requests_results', method: :get,  layout: :horizontal, label_col: 'col-md-4', control_col: 'col-md-8' do |f|
         = f.date_field :received_on_from
         = f.date_field :received_on_to
-        = f.text_field :zone
+        = f.collection_select :zone_ids, Zone.all, :id, :name, {}, { multiple: true, prompt: false }
         = f.text_field :house_number_gt, label: "House number >="
         = f.text_field :house_number_lt, label: "House number <="
         = f.text_field :street_name
