--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,60 +1,60 @@
 div class="container-fluid"
   div class="row"
-    div class="col-xs-8 col-md-9" 
-      h2 class="header-inline" 
+    div class="col-xs-8 col-md-9"
+      h2 class="header-inline"
         | User Details
       = render partial: 'shared/back_to_listing'
     div class="col-xs-4 col-md-3"
       div class="text-right"
         medium
-          | ( 
+          | (
           = link_to 'Edit', edit_user_path(@user)
           | &nbsp;|&nbsp;
-          = link_to 'Back', users_path
+          = link_to 'Delete', @user, data: {:confirm => 'Are you sure?'}, :method => :delete
           |  )
   br
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong First Name
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.first_name
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Last Name
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.last_name
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Username
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.username
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Email
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.email
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Phone
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.phone
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Created On
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = format_time_in_time_zone( @user.created_at )
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Login Count
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.login_count
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Last Login
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = format_time_in_time_zone( @user.last_login_at )
   div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right" 
+    div class="col-xs-4 col-md-2 text-right"
       strong Last Login IP
-    div class="col-xs-8 col-md-4" 
+    div class="col-xs-8 col-md-4"
       = @user.last_login_ip
