Replace boilerplate message with a better one.

--- a/app/views/homepage/index.html.slim
+++ b/app/views/homepage/index.html.slim
@@ -1,2 +1,4 @@
-h1 Homepage#index
-p Find me in app/views/homepage/index.html.slim
+.container
+  .row
+    .col-sm-12
+      h4 Welcome to the Richmond Trees Administration Application!
