--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -12,9 +12,13 @@ div class="row"
       = f.text_field :username
       = f.email_field :email
       = f.phone_field :phone
+      - if @user == current_user
+        = f.password_field :password, label: 'New Password'
+        = f.password_field :password_confirmation
       = f.submit
-    br
-    = bootstrap_form_tag url: password_resets_url do |pr|
-      = hidden_field_tag 'username', @user.username
-      = pr.submit 'Reset Password',  { class: 'btn btn-primary',
-        data: { confirm: 'Send password reset email?'} }
+    - if @user != current_user && ! ['new', 'create'].include?( action_name )
+      br
+      = bootstrap_form_tag url: password_resets_url do |pr|
+        = hidden_field_tag 'username', @user.username
+        = pr.submit 'Reset Password',  { class: 'btn btn-primary',
+          data: { confirm: 'Send password reset email?'} }
