--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -7,6 +7,7 @@ div class="row"
           ul
             - @user.errors.full_messages.each do |message|
               li = message
+      = f.check_box :active
       = f.text_field :first_name
       = f.text_field :last_name
       = f.text_field :username
