--- a/app/views/homepage/index.html.slim
+++ b/app/views/homepage/index.html.slim
@@ -1,4 +1,16 @@
 .container
   .row
     .col-sm-12
-      h4 Welcome to the Richmond Trees Administration Application!
+      h3 Welcome to the Richmond Trees Administration Application!
+      hr
+  .row
+    .col-sm-12
+      h4 Quick Search
+  .row.form-group
+    .col-sm-12
+      form class="form-inline"
+        div class="form-group"
+          label for="planting_id" Plantings:&nbsp;
+          input class="form-control" type="text" id="qs-plantings-val"
+        div class="form-group"
+          input class="form-control" type="button" value="Search" id="qs-plantings-send"
