--- a/app/views/adoption_requests/show.html.slim
+++ b/app/views/adoption_requests/show.html.slim
@@ -85,6 +85,11 @@ div class="container-fluid"
       = @adoption_request.form_sent_to_cor_on
   div class="row edit-row"
     div class="col-xs-4 col-md-2 text-right"
+      strong Site Pre-assessed On
+    div class="col-xs-8 col-md-4"
+      = @adoption_request.site_pre_assessed_on
+  div class="row edit-row"
+    div class="col-xs-4 col-md-2 text-right"
       strong Site Assessed On
     div class="col-xs-8 col-md-4"
       = @adoption_request.site_assessed_on
