cleanup plantings quick search form - make it work when pressing "Enter" as well as clicking on submit - don't submit if no value was entered

--- a/app/views/homepage/index.html.slim
+++ b/app/views/homepage/index.html.slim
@@ -8,9 +8,9 @@
       h4 Quick Search
   .row.form-group
     .col-sm-12
-      form class="form-inline"
+      form class="form-inline" id="qs-plantings-form"
         div class="form-group"
           label for="planting_id" Plantings:&nbsp;
           input class="form-control" type="text" id="qs-plantings-val"
         div class="form-group"
-          input class="form-control" type="button" value="Search" id="qs-plantings-send"
+          input class="form-control" type="submit" value="Search" id="qs-plantings-send"
