--- a/app/views/reports/adoption_requests_results.html.slim
+++ b/app/views/reports/adoption_requests_results.html.slim
@@ -27,8 +27,8 @@ div class="container-fluid"
               th Phone
               th Email
               th Tree Preference
+              th Concrete?
               th Wires?
-
               th Actions
           tbody
             - @results.each do |ar|
@@ -42,6 +42,7 @@ div class="container-fluid"
                 td = ar.owner_phone
                 td = ar.owner_email
                 td = ar.tree_species.common_name if ! ar.tree_species.nil?
+                td = ar.concrete_removal
                 td = ar.wires
                 td
                   ul
