--- a/app/views/notifier/password_reset.html.slim
+++ b/app/views/notifier/password_reset.html.slim
@@ -1,4 +1,4 @@
 h1 Password Reset Instructions
 p Use the link below to reset your Richmond Trees password.  The link will expire in 2 hours.
 br
-= link_to "Reset Password!", edit_password_reset_url( :id => @perishable_token )
+= link_to "Click here to reset your password", edit_password_reset_url( :id => @perishable_token )
